--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -10,7 +10,7 @@
     border-width: 1px;
     color: $color-x-dark;
     display: block;
-    padding: calc(#{$spv-nudge} - 1px) $sph-inner--small * 1.5;
+    padding: calc(#{$spv-nudge} - 1px) $sph-inner;
     text-decoration: none;
 
     &.is-disabled {
