--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -9,7 +9,6 @@ $color-light: #f7f7f7 !default;
 $color-mid-x-light: #e5e5e5 !default;
 $color-mid-light: #cdcdcd !default;
 $color-mid: #999 !default;
-$color-navigation-selected: #757575 !default;
 $color-mid-dark: #666 !default;
 $color-dark: #111 !default;
 $color-x-dark: #000 !default;
@@ -34,4 +33,25 @@ $states: (
   caution: $color-caution,
   success: $color-positive,
   information: $color-information
+);
+
+$colors--light-theme: (
+  background: #fff,
+  background-highlighted: #f7f7f7,
+  border-default: #cdcdcd,
+  border-high-contrast: #999,
+  text-hover: #757575,
+  text-disabled: #666,
+  text-default: #111
+);
+
+//text-hover: minimum contrast on primary that satisfies contrast checker AA
+$colors--dark-theme: (
+  background: hsl(0, 0%, 15%),
+  background-dark: hsl(0, 0%, 12%),
+  background-highlighted: hsl(0, 0%, 17%),
+  border-default: hsl(0, 0%, 27%),
+  border-high-contrast: hsl(0, 0%, 42%),
+  text-hover: hsl(0, 0%, 56%),
+  text-default: hsl(0, 0%, 100%)
 );
