--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -1,11 +1,11 @@
 @import 'settings';
+@import 'base_forms-tick-elements';
+
+$input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
 
 // Form element styles
 @mixin vf-b-forms {
-  //tick element variables
-  $box-size: 1rem;
-  $box-offset-top: $spv-nudge + $spv-inner--x-small; // center to x-height of adjacent text
-
+  @include vf-b-tick-elements;
   // Used in buttons, inputs
   %bordered-text-vertical-padding {
     padding-bottom: calc(#{$spv-nudge} - 1px);
@@ -76,67 +76,6 @@
     @each $state, $color in $states {
       &.has-#{$state} {
         border: 1px solid $color;
-      }
-    }
-  }
-
-  // Default form checkbox and radio styles
-  %vf-tick-elements {
-    opacity: 0;
-    position: absolute;
-
-    & + label {
-      padding-left: $sph-inner + $box-size;
-      position: relative;
-
-      &::before,
-      &::after {
-        $properties: #{background-color, border-color};
-        @include vf-animation($properties);
-        position: absolute;
-      }
-
-      // container
-      &::before {
-        border: 1px solid $color-mid;
-        content: '';
-        height: $box-size;
-        left: 0;
-        outline-offset: 1px;
-        top: $box-offset-top;
-        width: $box-size;
-      }
-
-      // tick/circle
-      &::after {
-        content: '';
-        opacity: 0;
-      }
-
-      &.is-inline-label {
-        // removing padding-top is only needed when the label needs to align
-        // to inline elements like text inside a td
-        display: inline;
-        padding-top: 0;
-
-        &::before {
-          top: 0;
-        }
-      }
-    }
-
-    &:checked + label::after {
-      opacity: 1;
-    }
-
-    &:focus + label::before {
-      outline: 2px solid $color-focus;
-    }
-
-    &[disabled],
-    &[disabled='disabled'] {
-      + label {
-        @extend %vf-disabled-element;
       }
     }
   }
@@ -224,70 +163,6 @@
       cursor: pointer;
     }
     // sass-lint:enable no-vendor-prefixes
-  }
-
-  [type='checkbox'] {
-    @extend %vf-tick-elements;
-
-    & + label {
-      &::before {
-        border-radius: $border-radius;
-      }
-
-      &::after {
-        $tick-height: 0.375rem;
-        $tick-offset-top: $box-offset-top + 0.1875rem;
-        border-bottom: 2px solid;
-        border-left: 2px solid;
-        color: $color-x-light;
-        height: $tick-height;
-        left: $tick-height * 0.5;
-        top: $tick-offset-top;
-        transform: rotate(-45deg);
-        width: 0.625rem;
-      }
-    }
-
-    &:checked + label::before {
-      background-color: $color-information;
-      border-color: $color-information;
-    }
-
-    &:checked + .is-inline-label::after {
-      top: $spv-inner--x-small;
-    }
-  }
-
-  [type='radio'] {
-    @extend %vf-tick-elements;
-    $inner-circle-diameter: 6px;
-
-    & + label {
-      &::before,
-      &::after {
-        border-radius: 50%;
-      }
-
-      &::after {
-        background-color: $color-x-light;
-        border-radius: 50%;
-        height: $inner-circle-diameter;
-        left: calc(#{$box-size * 0.5} - #{$inner-circle-diameter * 0.5});
-        top: calc(#{$box-offset-top + $box-size * 0.5} - #{$inner-circle-diameter * 0.5});
-        width: $inner-circle-diameter;
-      }
-    }
-
-    &:checked {
-      & + label::before {
-        background-color: $color-information;
-        border-color: $color-information;
-      }
-
-      & + .is-inline-label::after {
-        top: calc(#{$box-size * 0.5} - #{$inner-circle-diameter * 0.5});
-      }
-    }
   }
 
   // Select styles
