finalize checkbox and radio alignment to different headings; update docs

--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -27,7 +27,7 @@
     </style>
   </head>
 
-  <body class="u-baseline-grid" {% if page.url != '/' %}style="margin: 1rem; "{% endif %}>
+  <body {% if page.url != '/' %}style="margin: 1rem; "{% endif %}>
     {{ content }}
 
     <script>
