--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -38,7 +38,7 @@ $states: (
 $colors--light-theme: (
   background: #fff,
   background-highlighted: #f7f7f7,
-  border-default: transparentize(#000, 0.8),
+  border-default: #cdcdcd,
   border-high-contrast: #999,
   text-hover: #757575,
   text-disabled: #666,
