--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -1,8 +1,21 @@
 // tick element variables
 $box-size: 1rem;
-$box-offset-top: $sp-unit * 1.25;
+
 // Offsets to align tick elements to the baseline of headings.
-// Count how which baseline text is nudged to, multiply by $sp-unit (distance betweeen baselines) and subtract $box-height
+$box-offsets-top: (
+  h1-small-screens: 5,
+  h1: 6,
+  h2-small-screens: 4,
+  h2: 5,
+  h3-small-screens: 4,
+  h3: 4,
+  h4-small-screens: 3,
+  h4: 3,
+  default-text: 3.333,
+  unpadded-text: 2.125,
+  muted-heading: 2.333,
+  muted-inline-heading: 2
+) !default;
 
 @mixin vf-b-tick-elements {
   // Default form checkbox and radio styles
@@ -28,45 +41,85 @@ $box-offset-top: $sp-unit * 1.25;
         height: $box-size;
         left: 0;
         outline-offset: 1px;
-        top: $box-offset-top;
         width: $box-size;
       }
 
       // Align with different text styles
       @media (max-width: $breakpoint-heading-threshold) {
-        &.is-h1::before {
-          top: #{$sp-unit * 5 - $box-size};
+        &:not(.is-h1)::before,
+        &:not(.is-h2)::before,
+        &:not(.is-h3)::before,
+        &:not(.is-h4)::before,
+        &:not(.is-muted-heading)::before,
+        &:not(.is-inline-label)::before {
+          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $box-size};
         }
 
-        &.is-h2::before,
+        &.is-h1::before {
+          top: #{$sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+        }
+
+        &.is-h2::before {
+          top: #{$sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+        }
+
         &.is-h3::before {
-          top: #{$sp-unit * 4 - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
         }
 
         &.is-h4::before {
-          top: #{$sp-unit * 3 - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+        }
+
+        &.is-inline-label::before {
+          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+        }
+
+        &.is-muted-heading::before {
+          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+        }
+
+        &.is-muted-inline-heading::before {
+          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
         }
       }
 
       @media (min-width: $breakpoint-heading-threshold) {
+        &:not(.is-h1)::before,
+        &:not(.is-h2)::before,
+        &:not(.is-h3)::before,
+        &:not(.is-h4)::before,
+        &:not(.is-muted-heading)::before,
+        &:not(.is-inline-label)::before {
+          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+        }
+
         &.is-h1::before {
-          top: #{$sp-unit * 6 - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h1) - $box-size};
         }
 
         &.is-h2::before {
-          top: #{$sp-unit * 5 - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h2) - $box-size};
         }
 
         &.is-h3::before {
-          top: #{$sp-unit * 4 - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h3) - $box-size};
         }
 
         &.is-h4::before {
-          top: #{$sp-unit * 3 - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h4) - $box-size};
         }
 
-        &.is-muted::before {
-          top: #{$sp-unit * 3 - $box-size};
+        &.is-inline-label::before {
+          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+        }
+
+        &.is-muted-heading::before {
+          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+        }
+
+        &.is-muted-inline-heading::before {
+          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
         }
       }
 
@@ -74,17 +127,6 @@ $box-offset-top: $sp-unit * 1.25;
       &::after {
         content: '';
         opacity: 0;
-      }
-
-      &.is-inline-label {
-        // removing padding-top is only needed when the label needs to align
-        // to inline elements like text inside a td
-        display: inline;
-        padding-top: 0;
-
-        &::before {
-          top: 0;
-        }
       }
 
       &.is-h1 {
@@ -101,6 +143,22 @@ $box-offset-top: $sp-unit * 1.25;
 
       &.is-h4 {
         @extend %vf-heading-4;
+      }
+
+      &.is-inline-label {
+        display: inline;
+        padding-top: 0;
+      }
+
+      &.is-muted-heading {
+        @extend %muted-heading;
+      }
+
+      &.is-muted-inline-heading {
+        @extend %muted-heading;
+        display: inline;
+        margin-bottom: 0;
+        padding-top: 0;
       }
     }
 
@@ -132,38 +190,106 @@ $box-offset-top: $sp-unit * 1.25;
       //tick
       &::after {
         $tick-height: 0.375rem;
-        $tick-offset-top: #{$box-offset-top + 0.1875rem};
         border-bottom: 2px solid;
         border-left: 2px solid;
         color: $color-x-light;
         height: $tick-height;
         left: $tick-height * 0.5;
-        top: $tick-offset-top;
         transform: rotate(-45deg);
         width: 0.625rem;
+      }
+
+      $tick-offset-top: 0.1875rem;
+
+      // Align with different text styles
+      @media (max-width: $breakpoint-heading-threshold) {
+        &:not(.is-h1)::after,
+        &:not(.is-h2)::after,
+        &:not(.is-h3)::after,
+        &:not(.is-h4)::after,
+        &:not(.is-muted-heading)::after,
+        &:not(.is-inline-label)::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+        }
+
+        &.is-h1::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+        }
+
+        &.is-h2::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+        }
+
+        &.is-h3::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+        }
+
+        &.is-h4::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+        }
+
+        &.is-inline-label::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+        }
+
+        &.is-muted-heading::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+        }
+
+        &.is-muted-inline-heading::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+        }
+      }
+
+      @media (min-width: $breakpoint-heading-threshold) {
+        &:not(.is-h1)::after,
+        &:not(.is-h2)::after,
+        &:not(.is-h3)::after,
+        &:not(.is-h4)::after,
+        &:not(.is-muted-heading)::after,
+        &:not(.is-inline-label)::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+        }
+
+        &.is-h1::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $box-size};
+        }
+
+        &.is-h2::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $box-size};
+        }
+
+        &.is-h3::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $box-size};
+        }
+
+        &.is-h4::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $box-size};
+        }
+
+        &.is-inline-label::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+        }
+
+        &.is-muted-heading::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+        }
+
+        &.is-muted-inline-heading::after {
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+        }
       }
     }
 
     &:checked {
       @extend %checked;
     }
-
-    &.is-h2::after {
-    }
-
-    &.is-h3::after {
-    }
-
-    &.is-h4::after {
-    }
-
-    &.is-inline-label::after {
-    }
   }
 
   [type='radio'] {
     @extend %vf-tick-elements;
     $inner-circle-diameter: 0.375rem;
+    $circle-offset-top: 0.5 * ($box-size - $inner-circle-diameter);
 
     & + label {
       &::before,
@@ -176,12 +302,87 @@ $box-offset-top: $sp-unit * 1.25;
         border-radius: 50%;
         height: $inner-circle-diameter;
         left: #{($box-size - $inner-circle-diameter) * 0.5};
-        top: #{$box-offset-top + 0.5 * ($box-size - $inner-circle-diameter)};
+        // top: #{$box-offset-top + 0.5 * ($box-size - $inner-circle-diameter)};
         width: $inner-circle-diameter;
       }
 
-      & + .is-inline-label::after {
-        top: #{($box-size - $inner-circle-diameter) * 0.5};
+      // Align with different text styles
+      @media (max-width: $breakpoint-heading-threshold) {
+        &:not(.is-h1)::after,
+        &:not(.is-h2)::after,
+        &:not(.is-h3)::after,
+        &:not(.is-h4)::after,
+        &:not(.is-muted-heading)::after,
+        &:not(.is-inline-label)::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+        }
+
+        &.is-h1::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+        }
+
+        &.is-h2::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+        }
+
+        &.is-h3::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+        }
+
+        &.is-h4::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+        }
+
+        &.is-inline-label::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+        }
+
+        &.is-muted-heading::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+        }
+
+        &.is-muted-inline-heading::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+        }
+      }
+
+      @media (min-width: $breakpoint-heading-threshold) {
+        &:not(.is-h1)::after,
+        &:not(.is-h2)::after,
+        &:not(.is-h3)::after,
+        &:not(.is-h4)::after,
+        &:not(.is-muted-heading)::after,
+        &:not(.is-inline-label)::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+        }
+
+        &.is-h1::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $box-size};
+        }
+
+        &.is-h2::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $box-size};
+        }
+
+        &.is-h3::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $box-size};
+        }
+
+        &.is-h4::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $box-size};
+        }
+
+        &.is-inline-label::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+        }
+
+        &.is-muted-heading::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+        }
+
+        &.is-muted-inline-heading::after {
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+        }
       }
     }
 
