remove densification of inputs in tables and provide dense inputs/buttons via is-dense classes

--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -48,7 +48,7 @@
       }
     }
 
-    table & {
+    &.is-dense {
       margin-bottom: $spv-nudge-compensation;
       padding-bottom: calc(#{$spv-nudge - $sp-unit * 0.5} - 1px);
       padding-top: calc(#{$spv-nudge - $sp-unit * 0.5} - 1px);
