--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -39,7 +39,7 @@
     vertical-align: baseline;
     width: 100%;
 
-    table & {
+    &.is-dense {
       margin: 0 0 ($spv-inner--small - $spv-nudge) 0;
       padding-bottom: calc(#{$spv-nudge - $spv-inner--x-small} - 1px);
       padding-top: calc(#{$spv-nudge - $spv-inner--x-small} - 1px);
