--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -23,6 +23,14 @@ $box-offsets-top: (
     opacity: 0;
     position: absolute;
 
+    label & {
+      // some basic styling for checkboxes inside labels
+      float: left;
+      margin: $spv-inner--x-small $sph-inner 0 0;
+      position: static;
+      opacity: 1;
+    }
+
     & + label {
       padding-left: $sph-inner + $box-size;
       position: relative;
