Add support for right-aligned subnavs

--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -28,7 +28,8 @@
         transform: rotate(180deg);
       }
 
-      .p-subnav__items {
+      .p-subnav__items,
+      .p-subnav__items--right {
         display: block;
       }
     }
@@ -41,7 +42,8 @@
     }
   }
 
-  .p-subnav__items {
+  .p-subnav__items,
+  .p-subnav__items--right {
     @extend %vf-is-bordered;
     @extend %vf-has-box-shadow;
     @extend %vf-has-round-corners;
@@ -61,6 +63,10 @@
       border: 0;
       box-shadow: none;
     }
+  }
+
+  .p-subnav__items--right {
+    right: 0;
   }
 
   .p-subnav__item {
