fix vr issue in nav and tabs

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -36,6 +36,7 @@ $nav-border-bottom-thickness: 1px;
       & > a {
         @include vf-animation;
         display: block;
+        line-height: map-get($line-heights, default-text);
         margin-bottom: 0;
         overflow: hidden;
         position: relative;
