--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -60,6 +60,7 @@
     &__link {
       color: $color-x-dark;
       display: inline-block;
+      line-height: map-get($line-heights, default-text);
       padding: $spv-inner--medium $sph-inner;
 
       &:visited,
