--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -3,6 +3,7 @@
 
 @mixin vf-p-pagination {
   %pagination-link {
+    @include vf-focus;
     border-color: $color-mid;
     border-radius: $border-radius;
     border-style: solid;
