--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -16,7 +16,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
   // Default form input element styles
   %vf-input-elements {
     @extend %bordered-text-vertical-padding;
-    @include vf-focus;
+    @include vf-focus($color-focus, $bar-thickness, true);
 
     // sass-lint:disable no-vendor-prefixes property-sort-order
     -webkit-appearance: textfield;
