fix icon position

--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -17,6 +17,8 @@
     }
 
     & [class*='p-icon'] {
+      top: 0;
+
       &:only-child {
         margin-left: -#{$sph-inner--small};
         margin-right: -#{$sph-inner--small};
