--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -21,16 +21,11 @@
   th {
     @extend %single-border-text-vpadding--scaling;
     font-weight: 300;
-    padding-left: 0;
+    padding-left: $sph-inner--small;
+    padding-right: $sph-inner--small;
     text-align: left;
     text-overflow: ellipsis;
     vertical-align: top;
-
-    @media screen and (min-width: $breakpoint-medium) {
-      &:not(:last-child) {
-        padding-right: $sph-inner;
-      }
-    }
   }
 
   thead {
