--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://assets.ubuntu.com/v1/ab36e6ed-vanilla_favicon_32px.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/0a00ccd5-example-1.2.0.css" />
+    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/d249ebb5-example-1.2.1.css" />
   </head>
 
   <body>
@@ -25,30 +25,32 @@
 
     <div class="docs-container">
       <header id="navigation" class="p-navigation">
-        <div class="p-navigation__banner">
-          <div class="p-navigation__logo">
-            <a class="p-navigation__link" href="https://vanillaframework.io/">
-              <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
-            </a>
+        <div class="p-navigation__row">
+          <div class="p-navigation__banner">
+            <div class="p-navigation__logo">
+              <a class="p-navigation__link" href="https://vanillaframework.io/">
+                <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
+              </a>
+            </div>
+            <div class="p-navigation__toggles">
+              <a href="#navigation" class="p-navigation__toggle--open" title="about menu">About</a>
+              <a href="#navigation-closed" class="p-navigation__toggle--close" title="close about menu">About</a>
+              <a class="p-sidebar__toggle u-hide--medium u-hide--large" href="#">Patterns</a>
+            </div>
           </div>
-          <div class="p-navigation__toggles">
-            <a href="#navigation" class="p-navigation__toggle--open" title="about menu">About</a>
-            <a href="#navigation-closed" class="p-navigation__toggle--close" title="close about menu">About</a>
-            <a class="p-sidebar__toggle u-hide--medium u-hide--large" href="#">Patterns</a>
-          </div>
+          <nav class="p-navigation__nav">
+            <span class="u-off-screen">
+              <a href="#main-content">Jump to main content</a>
+            </span>
+            <ul class="p-navigation__links">
+              <li class="p-navigation__link is-selected"><a href="/">Docs</a></li>
+              <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
+              <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
+              <li class="p-navigation__link"><a href="https://vanillaframework.io/coding-standards">Coding standards</a></li>
+              <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
+            </ul>
+          </nav>
         </div>
-        <nav class="p-navigation__nav">
-          <span class="u-off-screen">
-            <a href="#main-content">Jump to main content</a>
-          </span>
-          <ul class="p-navigation__links">
-            <li class="p-navigation__link is-selected"><a href="/">Docs</a></li>
-            <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
-            <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
-            <li class="p-navigation__link"><a href="https://vanillaframework.io/coding-standards">Coding standards</a></li>
-            <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
-          </ul>
-        </nav>
       </header>
 
       <aside class="p-sidebar">
@@ -72,8 +74,8 @@
               <li class="p-sidebar-nav__item">
                 <strong>Base elements</strong>
                 <ul class="p-sidebar-nav__list">
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/code/' %}is-active{% endif %}" href="/base/code/">Code</a><div class="p-label--updated u-float-right">Updated</div></li>
-                  <li class="p-sidebar-nav__item u-clearfix"><a class="p-link--soft {% if page.url == '/base/details/' %}is-active{% endif %}" href="/base/details/">Details</a><div class="p-label--new u-float-right">New</div></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/code/' %}is-active{% endif %}" href="/base/code/">Code</a><div class="p-label--updated u-float-right u-no-margin--bottom">Updated</div></li>
+                  <li class="p-sidebar-nav__item u-clearfix"><a class="p-link--soft {% if page.url == '/base/details/' %}is-active{% endif %}" href="/base/details/">Details</a><div class="p-label--new u-float-right u-no-margin--bottom">New</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/forms/' %}is-active{% endif %}" href="/base/forms/">Forms</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/reset/' %}is-active{% endif %}" href="/base/reset/">Reset</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/tables/' %}is-active{% endif %}" href="/base/tables">Tables</a></li>
@@ -84,7 +86,7 @@
               <li class="p-sidebar-nav__item">
                 <strong>Components</strong>
                 <ul class="p-sidebar-nav__list">
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/accordion/' %}is-active{% endif %}" href="/patterns/accordion/">Accordion</a><div class="p-label--updated u-float-right">Updated</div></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/accordion/' %}is-active{% endif %}" href="/patterns/accordion/">Accordion</a><div class="p-label--updated u-float-right u-no-margin--bottom">Updated</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/article-pagination/' %}is-active{% endif %}" href="/patterns/article-pagination/">Article pagination</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/breadcrumbs/' %}is-active{% endif %}" href="/patterns/breadcrumbs/">Breadcrumbs</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/buttons/' %}is-active{% endif %}" href="/patterns/buttons/">Buttons</a></li>
@@ -101,12 +103,12 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/lists/' %}is-active{% endif %}" href="/patterns/lists/">Lists</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/matrix/' %}is-active{% endif %}" href="/patterns/matrix/">Matrix</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/media-object/' %}is-active{% endif %}" href="/patterns/media-object/">Media object</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/menu-button/' %}is-active{% endif %}" href="/patterns/menu-button/">Menu button</a><div class="p-label--in-progress u-float-right">In progress</div></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/menu-button/' %}is-active{% endif %}" href="/patterns/menu-button/">Menu button</a><div class="p-label--in-progress u-float-right u-no-margin--bottom">In progress</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/modal/' %}is-active{% endif %}" href="/patterns/modal/">Modal</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/muted-heading/' %}is-active{% endif %}" href="/patterns/muted-heading/">Muted heading</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/navigation/' %}is-active{% endif %}" href="/patterns/navigation/">Navigation</a><div class="p-label--new u-float-right">New</div></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/navigation/' %}is-active{% endif %}" href="/patterns/navigation/">Navigation</a><div class="p-label--new u-float-right u-no-margin--bottom">New</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/notification/' %}is-active{% endif %}" href="/patterns/notification/">Notifications</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/pagination/' %}is-active{% endif %}" href="/patterns/pagination/">Pagination</a><div class="p-label--new u-float-right">New</div></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/pagination/' %}is-active{% endif %}" href="/patterns/pagination/">Pagination</a><div class="p-label--new u-float-right u-no-margin--bottom">New</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/pull-quote/' %}is-active{% endif %}" href="/patterns/pull-quote/">Quotes</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/search-box/' %}is-active{% endif %}" href="/patterns/search-box/">Search box</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/slider/' %}is-active{% endif %}" href="/patterns/slider/">Slider</a></li>
@@ -310,7 +312,7 @@
       </script>
     </div>
     <script src="/js/scripts.js"></script>
-    <script src="https://assets.ubuntu.com/v1/6fdf5833-example-1.2.0.js"></script>
+    <script src="https://assets.ubuntu.com/v1/6fdf5833-example-1.2.1.js"></script>
     <!-- begin usabilla live embed code -->
     <script type="text/javascript">/*{literal}<![CDATA[*/window.lightningjs||function(c){function g(b,d){d&&(d+=(/\?/.test(d)?"&":"?")+"lv=1");c[b]||function(){var i=window,h=document,j=b,g=h.location.protocol,l="load",k=0;(function(){function b(){a.P(l);a.w=1;c[j]("_load")}c[j]=function(){function m(){m.id=e;return c[j].apply(m,arguments)}var b,e=++k;b=this&&this!=i?this.id||0:0;(a.s=a.s||[]).push([e,b,arguments]);m.then=function(b,c,h){var d=a.fh[e]=a.fh[e]||[],j=a.eh[e]=a.eh[e]||[],f=a.ph[e]=a.ph[e]||[];b&&d.push(b);c&&j.push(c);h&&f.push(h);return m};return m};var a=c[j]._={};a.fh={};a.eh={};a.ph={};a.l=d?d.replace(/^\/\//,(g=="https:"?g:"http:")+"///"):d;a.p={0:+new Date};a.P=function(b){a.p[b]=new Date-a.p[0]};a.w&&b();i.addEventListener?i.addEventListener(l,b,!1):i.attachEvent("on"+l,b);var q=function(){function b(){return["<head></head><",c,' onload="var d=',n,";d.getElementsByTagName('head')[0].",d,"(d.",g,"('script')).",i,"='",a.l,"'\"></",c,">"].join("")}var c="body",e=h[c];if(!e)return setTimeout(q,100);a.P(1);var d="appendChild",g="createElement",i="src",k=h[g]("div"),l=k[d](h[g]("div")),f=h[g]("iframe"),n="document",p;k.style.display="none";e.insertBefore(k,e.firstChild).id=o+"-"+j;f.frameBorder="0";f.id=o+"-frame-"+j;/MSIE[ ]+6/.test(navigator.userAgent)&&(f[i]="javascript:false");f.allowTransparency="true";l[d](f);try{f.contentWindow[n].open()}catch(s){a.domain=h.domain,p="javascript:var d="+n+".open();d.domain='"+h.domain+"';",f[i]=p+"void(0);"}try{var r=f.contentWindow[n];r.write(b());r.close()}catch(t){f[i]=p+'d.write("'+b().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};a.l&&setTimeout(q,0)})()}();c[b].lv="1";return c[b]}var o="lightningjs",k=window[o]=g(o);k.require=g;k.modules=c}({});
 window.usabilla_live = lightningjs.require("usabilla_live", "//w.usabilla.com/4f2e23c6debc.js");
