Add HR under nav in docs

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -52,7 +52,7 @@
           </nav>
         </div>
       </header>
-
+      <hr class="u-no-margin u-hide--small">
       <aside class="p-sidebar">
         <div class="p-sidebar__content">
           <form class="p-search-box" onsubmit="return false">
