Add padding below tables

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -4,10 +4,10 @@
 @mixin vf-b-tables {
   table {
     border: 0;
+    border-bottom: $spv-outer--scaleable solid transparent;
     border-collapse: collapse;
     line-height: map-get($line-heights, default-text);
     overflow-x: auto;
-    padding-bottom: $spv-outer--scaleable;
     width: 100%;
 
     @if ($table-layout-fixed) {
