provide utility to overlap table cell padding

--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -147,6 +147,9 @@ $icon-sizes: (
   thumb--large: $sp-unit * 12
 ) !default;
 
+$table-cell-padding-top: $spv-inner--x-small--scaleable !default;
+$table-cell-padding-bottom: $spv-inner--x-small--scaleable !default;
+
 // generic units
 $sp-xx-small: $sp-unit * 0.25 !default;
 $sp-x-small: $sp-unit * 0.5 !default;
