--- a/scss/_utilities_margin-collapse.scss
+++ b/scss/_utilities_margin-collapse.scss
@@ -20,4 +20,9 @@
       margin-left: 0 !important;
     }
   }
+
+  .u-table-cell-padding-overlap {
+    margin-bottom: -#{$table-cell-padding-top} !important;
+    margin-top: calc(-#{$table-cell-padding-bottom} - 1px) !important;
+  }
 }
