--- a/scss/_base_placeholders.scss
+++ b/scss/_base_placeholders.scss
@@ -36,6 +36,12 @@
     padding: $spv-inner--large;
   }
 
+  //accordion, table
+  %single-border-text-vpadding--scaling {
+    padding-bottom: $table-cell-padding-top;
+    padding-top: calc(#{$table-cell-padding-bottom} - 1px);
+  }
+
   // Bars and borders
   %vf-pseudo-border {
     background-color: $color-mid-light;
