replace top/bottom table cell padding variables with unique var

--- a/scss/_base_placeholders.scss
+++ b/scss/_base_placeholders.scss
@@ -38,8 +38,8 @@
 
   //accordion, table
   %single-border-text-vpadding--scaling {
-    padding-bottom: $table-cell-padding-top;
-    padding-top: calc(#{$table-cell-padding-bottom} - 1px);
+    padding-bottom: $table-cell-vertical-padding;
+    padding-top: calc(#{$table-cell-vertical-padding} - 1px);
   }
 
   // Bars and borders
