--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -147,8 +147,7 @@ $icon-sizes: (
   thumb--large: $sp-unit * 12
 ) !default;
 
-$table-cell-padding-top: $spv-inner--x-small--scaleable !default;
-$table-cell-padding-bottom: $spv-inner--x-small--scaleable !default;
+$table-cell-vertical-padding: $spv-inner--x-small--scaleable;
 
 // generic units
 $sp-xx-small: $sp-unit * 0.25 !default;
