--- a/scss/_utilities_margin-collapse.scss
+++ b/scss/_utilities_margin-collapse.scss
@@ -22,7 +22,7 @@
   }
 
   .u-table-cell-padding-overlap {
-    margin-bottom: -#{$table-cell-padding-top} !important;
-    margin-top: calc(-#{$table-cell-padding-bottom} - 1px) !important;
+    margin-bottom: -#{$table-cell-vertical-padding} !important;
+    margin-top: calc(-#{$table-cell-vertical-padding} - 1px) !important;
   }
 }
