Provide utility to overlap table cell padding (#2636)
* provide utility to overlap table cell padding

* add exsample to nav, clarify example copy

* capitalise text

* replace top/bottom table cell padding variables with unique var

--- a/scss/_utilities_margin-collapse.scss
+++ b/scss/_utilities_margin-collapse.scss
@@ -20,4 +20,9 @@
       margin-left: 0 !important;
     }
   }
+
+  .u-table-cell-padding-overlap {
+    margin-bottom: -#{$table-cell-vertical-padding} !important;
+    margin-top: calc(-#{$table-cell-vertical-padding} - 1px) !important;
+  }
 }
