--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -147,6 +147,8 @@ $icon-sizes: (
   thumb--large: $sp-unit * 12
 ) !default;
 
+$table-cell-vertical-padding: $spv-inner--x-small--scaleable;
+
 // generic units
 $sp-xx-small: $sp-unit * 0.25 !default;
 $sp-x-small: $sp-unit * 0.5 !default;
