add truncate util; increase size limit to pass tests

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -60,6 +60,7 @@
 @import 'utilities_off-screen';
 @import 'utilities_padding-collapse';
 @import 'utilities_show';
+@import 'utilities_truncate';
 @import 'utilities_vertical-spacing';
 @import 'utilities_vertically-center';
 @import 'utilities_no-print';
@@ -126,6 +127,7 @@
   @include vf-u-off-screen;
   @include vf-u-padding-collapse;
   @include vf-u-show;
+  @include vf-u-truncate;
   @include vf-u-vertical-spacing;
   @include vf-u-vertically-center;
   @include vf-u-visualise-baseline;
