--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -32,15 +32,6 @@
 @mixin vf-button-neutral {
   %p-button--neutral {
     @extend %vf-button-base;
-
-    @include vf-button-pattern(
-      $button-disabled-border-color: $color-mid,
-      $button-border-color: $color-mid,
-      $button-hover-background-color: darken($color-x-light, 10%),
-      $button-hover-border-color: $color-mid,
-      $button-active-background-color: darken($color-x-light, 15%),
-      $button-active-border-color: $color-mid
-    );
   }
 
   .p-button--neutral {
@@ -121,11 +112,9 @@
     @include vf-button-pattern(
       $button-background-color: $color-transparent,
       $button-border-color: $color-transparent,
-      $button-text-color: $color-x-dark,
-      $button-hover-background-color: darken($color-x-light, 10%),
       $button-hover-border-color: $color-transparent,
-      $button-active-background-color: darken($color-light, 15%),
-      $button-active-border-color: $color-transparent
+      $button-active-border-color: $color-transparent,
+      $button-disabled-border-color: $color-transparent
     );
   }
 
