--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -42,6 +42,7 @@ $colors--light-theme--border-high-contrast: #999 !default;
 $colors--light-theme--text-hover: #757575 !default;
 $colors--light-theme--text-disabled: #666 !default;
 $colors--light-theme--text-default: #111 !default;
+$colors--light-theme--text-link: $color-link !default;
 
 //text-hover: minimum contrast on primary that satisfies contrast checker AA
 $colors--dark-theme--background: hsl(0, 0%, 15%) !default;
