Add baseline grid toggle to individual example page

--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -8,6 +8,7 @@
 
     {% if page.individual %}
     <link rel="stylesheet" type="text/css" href="/build/css/individual/{{ page.individual }}.css" />
+    <link rel="stylesheet" type="text/css" href="/build/css/individual/example.css" />
     {% else %}
     <link rel="stylesheet" type="text/css" href="/build/css/build.css" />
     {% endif %}
@@ -33,7 +34,6 @@
       }
     </style>
 
-    {% unless page.individual %}
     <script>
       (function() {
         function inIframe () {
@@ -64,7 +64,6 @@
         }
       })();
     </script>
-    {% endunless %}
   </head>
 
   <body>
