Move icon mixins to base styles to remove dependency on the icon pattern

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,6 @@
 // Base
 @import 'base_placeholders'; //mandatory import
+@import 'base_icon-definitions';
 @import 'base_typography';
 @import 'base_blockquotes';
 @import 'base_box-sizing';
