Add word break to wrap long words/URLs.

--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -25,6 +25,7 @@
     font-weight: 300;
     // set default line height to match p
     line-height: map-get($line-heights, default-text);
+    word-break: break-word;
 
     @if ($increase-font-size-on-larger-screens) {
       @media screen and (max-width: $breakpoint-x-large) {
