Make sure all settings files are independent

--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -1,3 +1,6 @@
+@import 'settings_spacing';
+@import 'settings_breakpoints';
+
 // Global grid settings
 $grid-columns: 12 !default;
 $grid-columns-small: 4 !default;
