--- a/scss/_settings_placeholders.scss
+++ b/scss/_settings_placeholders.scss
@@ -1,3 +1,6 @@
+@import 'settings_spacing';
+@import 'settings_colors';
+
 // Global placeholder settings
 
 $bar-thickness: 0.1875rem !default; // 3px at 16px fontsize, expressed in rems so it scales with text if the root font-size changes at a breakpoint
